Refactoring: Fix Idea inspections (#4634)