@@ -178,7 +178,7 @@ public class LoyalBidderTest extends VertxTest {
 
         final List<BidderError> errors = result.getErrors();
         assertThat(errors).hasSize(1);
-        assertThat(errors.get(0).getMessage())
+        assertThat(errors.getFirst().getMessage())
                 .startsWith("found no valid impressions");
     }
 
