@@ -131,7 +131,7 @@ public class NativeryBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).isEmpty();
 
-        final ExtRequest resultingExt = result.getValue().get(0).getPayload().getExt();
+        final ExtRequest resultingExt = result.getValue().getFirst().getPayload().getExt();
 
         assertThat(resultingExt.getProperty("accountId").asText()).isEqualTo("acc-123");
         assertThat(resultingExt.getProperty("nativery").path("widgetId").asText()).isEqualTo("widget1");
@@ -262,7 +262,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(BidType.banner);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
@@ -291,7 +291,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(BidType.banner);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
@@ -319,7 +319,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(banner);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
@@ -348,7 +348,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(BidType.video);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
@@ -377,7 +377,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(BidType.xNative);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
@@ -436,7 +436,7 @@ public class NativeryBidderTest extends VertxTest {
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
 
-        final BidderBid bidderBid = result.getValue().get(0);
+        final BidderBid bidderBid = result.getValue().getFirst();
         assertThat(bidderBid.getType()).isEqualTo(BidType.xNative);
         assertThat(bidderBid.getBidCurrency()).isEqualTo(DEFAULT_CURRENCY);
 
